--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ layout: default
     </article>
   {% endfor %}
 </div>
+<div class="infobox"><a href="{{ site.baseurl }}/blog">more posts</a></div>
