--- a/index.html
+++ b/index.html
@@ -20,4 +20,4 @@ layout: default
     </article>
   {% endfor %}
 </div>
-<div class="infobox"><a href="{{ site.baseurl }}/blog">more posts</a></div>
+<div style="text-align: center; padding: 1em"><a href="{{ site.baseurl }}/blog">more posts</a></div>
